<resources>
    <string name="app_name">UltraTodo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_today_todo">Today\'s TODOs</string>
    <string name="menu_all_todos">All TODOs</string>
    <string name="menu_new_todo">New TODO</string>

    <string name="todo_name">TODO Name</string>
    <string name="todo_description">TODO Description</string>
    <string name="todo_list">Todo List</string>
    <string name="new_todo">New Todo</string>
    <string name="title">Title</string>
    <string name="priority">Priority</string>
    <string name="low">Low</string>
    <string name="type">Type</string>
    <string name="normal">Normal</string>
    <string name="description">Description</string>
    <string name="add_todo">Add Todo</string>
    <string name="low_opt">Low</string>
    <string name="medium_opt">Medium</string>
    <string name="high_opt">High</string>
    <string name="urgent_opt">Urgent</string>
    <string name="priority_label">Priority</string>
    <string name="type_label">Type</string>
    <string name="todo_missing_fields">Please fill in the form in order to add a new todo!</string>
    <string name="close">Close</string>
    <string name="app_version">Version: 1.0.0</string>
    <string name="app_authors">Authors: Delegeanu Alexandru, Francu Catalin, Goia Ciprian-Gabriel, Linca Alin</string>
    <string name="app_about">Descrierea paginii de about</string>
    <string name="all_todos">All TODOs</string>
    <string name="state">State</string>
    <string name="done">Done</string>
    <string name="pending">Pending</string>
    <string name="are_you_sure_do_you_want_to_delete_this_todo">Are you sure do you want to delete this todo?</string>
    <string name="delete">Delete</string>
    <string name="delete_todo">Delete todo</string>
    <string name="edit_todo">Edit Todo</string>
    <string name="info_fragment1">"Welcome to UltraTodo, the ultimate productivity app for managing your tasks and to-do lists effortlessly.
Our goal is to provide a seamless and intuitive experience, helping you stay organized and focused on your daily tasks with ease.
Built with the latest technologies, UltraTodo offers a sleek and modern interface that adapts to your needs across all devices and platforms."</string>
    <string name="info_fragment2">"In addition to creating and organizing your to-do lists, UltraTodo offers a range of advanced functionalities. Set priorities, track task progress, add due dates, and categorize tasks based on their type or urgency.
We understand that productivity is not limited to a single screen. That's why UltraTodo seamlessly syncs your tasks across devices, ensuring you can access and update them wherever you go."</string>
    <string name="info_fragment3">"But UltraTodo is more than just a task manager. It's a hub for personal growth and achievement. Join our community of motivated individuals to share tips, strategies, and inspiration for maximizing productivity.
Whether you're a busy professional, a student with a packed schedule, or simply someone who wants to stay organized, UltraTodo is your go-to app for staying on top of your tasks and achieving your goals efficiently."</string>
    <string name="moreinfo">More info</string>
    <string name="today_s_todos">Today\'s TODOs</string>
</resources>