<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_todo_list"
            android:icon="@drawable/ic_menu_today_todos"
            android:title="@string/today_s_todos" />

        <item
            android:id="@+id/nav_todo_list_all"
            android:icon="@drawable/ic_menu_all_todos"
            android:title="@string/all_todos" />

        <item
            android:id="@+id/nav_new_todo"
            android:icon="@drawable/ic_add"
            android:title="@string/new_todo" />

        <item
            android:id="@+id/nav_to_about_us"
            android:icon="@drawable/ic_about_us"
            android:title="About us" />

        <item
            android:id="@+id/InfoTodoFragment"
            android:icon="@drawable/baseline_question_mark_24"
            android:title="More info stuff" />

    </group>
</menu>