<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    app:cardElevation="2dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <RelativeLayout
                android:id="@+id/popup_anchor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/titleTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/titleEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descriptionTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/descriptionEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="70dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/priority_label" />

                <RadioGroup
                    android:id="@+id/priorityRadioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radioButtonLow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/low_opt" />

                    <RadioButton
                        android:id="@+id/radioButtonMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/medium_opt" />

                    <RadioButton
                        android:id="@+id/radioButtonHigh"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/high_opt" />

                    <RadioButton
                        android:id="@+id/radioButtonUrgent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/urgent_opt" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/type_label" />

                <RadioGroup
                    android:id="@+id/typeRadioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radioButtonNormal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Normal" />

                    <RadioButton
                        android:id="@+id/radioButtonLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Location" />
                </RadioGroup>
            </LinearLayout>

            <com.google.android.gms.maps.MapView
                android:id="@+id/mapView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cameraZoom="12" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Save Changes"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"/>
        </LinearLayout>
    </ScrollView>
</com.google.android.material.card.MaterialCardView>